syntax = "proto3";

option java_package = "ch.bergturbenthal.raoa.service.file.download";
option java_multiple_files = true;
package raoa;

service FileDownloadService {
	rpc downloadFile(FileDownloadRequest) returns (stream FileFragment);
}

message FileDownloadRequest {
	int64 downloadHandle = 1;
}

message FileFragment {
	bytes data = 1;
	bool lastFragment = 2;
}